--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -4,7 +4,7 @@ $lightBlue: #c7caf0;
   display: flex;
   justify-content: center;
   .container {
-    width: 1280px;
+    width: 100%;
 
     .link {
       text-decoration: none;
@@ -77,7 +77,7 @@ $lightBlue: #c7caf0;
         .links {
           display: flex;
           align-items: center;
-          gap: 10px;
+          gap: 20px;
 
           h6 {
             font-size: 16px;
@@ -88,22 +88,9 @@ $lightBlue: #c7caf0;
             cursor: pointer;
           }
 
-          .write {
-            background-color: $lightBlue;
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-weight: 300;
-            border: 1px solid white;
-
-            &:hover {
-              color: teal;
-              background-color: white;
-              border: 1px solid teal;
-            }
+          &:hover {
+            color: teal;
+            background-color: white;
           }
         }
       }
@@ -112,8 +99,8 @@ $lightBlue: #c7caf0;
     //FOOTER
 
     footer {
-      margin-top: 100px;
-      padding: 20px;
+      margin-bottom: 0 auto;
+      padding: 20px 0px;
       background-color: $lightBlue;
       display: flex;
       align-items: center;
@@ -121,7 +108,12 @@ $lightBlue: #c7caf0;
       font-size: 12px;
       img {
         height: 50px;
+        padding: 10px;
       }
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 30px;
     }
 
     //HOME
