--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -76,7 +76,7 @@ $lightOrange: #e8b962;
       height: 100%;
       display: flex;
       align-items: center;
-      padding-left: 150px;
+      padding-left: 10px;
 
       .heading{
         color: rgba(255, 255, 255, 0.885);
@@ -88,6 +88,7 @@ $lightOrange: #e8b962;
     .leftSide img {
       width: 150px;
       size: 50cm;
+      margin-top: 10px;
     }
 
     .rightSide {
@@ -212,6 +213,10 @@ $lightOrange: #e8b962;
     //FOOTER
 
     footer {
+      .leftSide img {
+        width: 60px;
+        margin-top: 10px;
+      }
       margin-bottom: 0;
       padding: 20px 0px;
       background-color: rgb(221, 221, 221);
@@ -220,7 +225,7 @@ $lightOrange: #e8b962;
       justify-content: space-between;
       font-size: 12px;
       width: 100%;
-      height: 5px;
+      height: 30px;
       //min-height: calc(100% - 285px); // 285 should be the height of your header + height of footer.
     }
 
