--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -106,6 +106,7 @@ $lightOrange: #e8b962;
     }
     
     .rightSide button {
+      margin-right: 10px;
       background-color: transparent;
       border: none;
       color: white;
@@ -174,41 +175,6 @@ $lightOrange: #e8b962;
       }
     }
   }
-  
-/*
-    .navbar {
-      .container {
-        padding: 10px 0px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        .logo {
-          img {
-            width: 120px;
-          }
-        }
-        .links {
-          display: flex;
-          align-items: center;
-          gap: 20px;
-
-          h6 {
-            font-size: 16px;
-            font-weight: 300;
-          }
-
-          span {
-            cursor: pointer;
-          }
-
-          &:hover {
-            color: teal;
-            background-color: white;
-          }
-        }
-      }
-    }
-    */
 
     //FOOTER
 
