--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -70,10 +70,10 @@ $lightOrange: #e8b962;
       }
     }
 
-   
-    .logo {
+    
+        .logo {
       max-width: 100px;
-    }
+          }
 
     //FOOTER
 
@@ -95,7 +95,7 @@ $lightOrange: #e8b962;
     }
 
     //HOME
-    
+
 
     .home {
       height: 90vh;
@@ -187,6 +187,16 @@ $lightOrange: #e8b962;
     
 
       }
+.img-background{
+  height: 90vh;
+  background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('./img/background.jpeg');
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+}
 
 //YourHealth
 .nutrition {
