up to date workout generator

--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -106,6 +106,7 @@ $lightOrange: #e8b962;
       justify-content: center;
       align-items: center;
       text-align: center;
+      margin: auto;
     
       
       .content {
